# odoo-project-manager

./: .gitignore  README.md  opm.py  pyproject.toml
.github/workflows/: ci.yml
examples/: odoo18-minimal.ini  odoo18-var-overrides.ini  odoo18-with-cetmix-tower.ini  odoo18-with-oca-helpdesk.ini  odoo19-minimal.ini  odoo19-with-mukit-modules.ini
odoo_devops_tools/: env.py
scripts/: build-dist-linux.sh  build-dist-wine.sh  test_odoo_versions.sh
